Example of authorization using custom authorities table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #We have give below property because we want to set data from data.sql in table created by @Entity
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=create
