Changes to see builtin filters provided by Spring Security

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #We have give below property because we want to set data from data.sql in table created by @Entity
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create
+
+#This will log the debig logs present in FilterChainProxy
+#The VirtualFilterChain iterates over all the filters and implements filter logic accordingly
+logging.level.springframework.security.web.FilterChainProxy=DEBUG
