Example of adding custom filter after another filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.jpa.hibernate.ddl-auto=create
 
 #This will log the debig logs present in FilterChainProxy
 #The VirtualFilterChain iterates over all the filters and implements filter logic accordingly
-#logging.level.springframework.security.web.FilterChainProxy=DEBUG
+logging.level.springframework.security.web.FilterChainProxy=DEBUG
